# newbotushki

./: .env  Dockerfile  Dockerfile.optimized  Makefile  README.md  README_OPTIMIZED.md  pyproject.toml  render.yaml  requirements.txt  semantic_bot.py
app/: chunker.py  config.py  logging_setup.py  main.py
app/bot/: handlers.py
app/ocr/: ocr.py  postprocess.py  preprocess.py
app/services/: chunking.py  chunking_sections.py  embeddings.py  extract.py  generation.py  generation_fallbacks.py  hybrid_retriever.py  indexing.py  llm_clean.py  tm.py
app/utils/: files.py  usage.py
bot/: handlers.py
docs/: CHANGELOG.md  INTEGRATION.md  auto_patch_log.txt
documents/: А0112-2 прдфинал-2.docx  отчеждениеРИД списком (3) (1) (1).xls
examples/: demo_split.py  sample_contract.txt
services/: chunking_sections.py  generation_fallbacks.py  hybrid_retriever.py  indexing.py
utils/: pdf.py
