[project]
name = "semantic-bot"
version = "0.1.0"
requires-python = ">=3.11"


[tool.ruff]
line-length = 100
select = ["E","F","I","B","UP","SIM"]
exclude = ["data"]

[tool.ruff.lint.isort]
known_first_party = ["app"]

[tool.mypy]
python_version = "3.11"
pretty = true
strict = false
ignore_missing_imports = true

